unpackaged/main/default/objects/Opportunity_Support__c/Opportunity_Support__c.object-meta.xml
<CustomObject>
    <label>Opportunity Support</label>
    <nameField>
        <displayFormat>OS-{000000}</displayFormat>
        <label>Opportunity Support Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Support</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>