unpackaged/main/default/objects/Opportunity_Support__c/fields/Assignment_Type__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Type__c</fullName>
    <label>Assignment Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I know who will support this opportunity</fullName>
            </value>
            <value>
                <fullName>I am requesting help be assigned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>