unpackaged/main/default/objects/Opportunity_Support__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunity_Support</relationshipName>
    <type>Lookup</type>
</CustomField>